--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,15 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url(./images/steffi-harms-Cj0tPzC5Uic-unsplash.jpg);
-  background-position: center;
+  background-color: rgb(0 124 237);
 }
 
 .Pages {
   display: flex;
   justify-content: center;
   padding: 1%;
-  background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  background: rgb(255 255 255);
+  box-shadow: 10px 8px 32px 0 rgba(186, 88, 189, 0.37);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   border-radius: 10px;
@@ -25,14 +24,15 @@ body {
   justify-content: space-between;
   margin: 1%;
   font-size: 120%;
+  font-family: "Courier New", Courier, monospace;
 }
 
-.about {
+.landing {
   display: flex;
   justify-content: center;
   font-family: serif;
-  background: rgba(255, 255, 255, 0.5);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  background: rgb(255 255 255);
+  box-shadow: 10px 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   border-radius: 10px;
@@ -40,14 +40,29 @@ body {
   margin: 5%;
   padding: 5%;
 }
+
+.dev-heading {
+  color: #007ced;
+}
+
 h1 {
-  text-transform: uppercase;
   font-size: 300%;
+  font-family: "Courier New", Courier, monospace;
+  color: black;
 }
 
 h2 {
   font-size: 200%;
-  color: darkblue;
+  color: black;
+  font-family: "Courier New", Courier, monospace;
+}
+
+h3 {
+  color: #727272;
+}
+
+h4 {
+  color: #727272;
 }
 
 img {
@@ -58,10 +73,12 @@ img {
 p {
   padding: 3%;
   font-size: 170%;
+  font-family: "Courier New", Courier, monospace;
+  color: #727272;
 }
 
 .about-container {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgb(255 255 255);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
@@ -71,16 +88,181 @@ p {
   padding: 5%;
 }
 
-.about-heading {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 5%;
-}
-
 .bio {
-  color: darkblue;
+  color: black;
+  font-size: 140%;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .about-text {
   font-size: 125%;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.bio-border {
+  border-style: double;
+  border-width: 5px;
+  border-color: #007ced;
+  margin: 2%;
+  padding: 1%;
+}
+
+.line {
+  grid-column: 2;
+  grid-row: 1/5;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  height: 100%;
+  width: 10px;
+}
+
+.timeline-container {
+  display: grid;
+  grid-template-columns: 1fr 10% 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  background-color: rgb(0 124 237);
+  justify-items: center;
+  padding: 10%;
+}
+
+.card {
+  padding: 10%;
+  background: #ffffff;
+  box-shadow: 0px 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  font-size: 130%;
+  border-style: double;
+  border-width: 10px;
+  border-color: #007ced;
+}
+
+.card1 {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-row-start: 1;
+  grid-column-start: 3;
+}
+
+.card2 {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-row-start: 2;
+  grid-column-start: 1;
+}
+
+.card3 {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-row-start: 3;
+  grid-column-start: 3;
+}
+
+.card4 {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-row-start: 4;
+  grid-column-start: 1;
+}
+
+.edu-heading {
+  padding: 1%;
+}
+
+.pro-heading {
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  background: rgba(74, 144, 226, 0);
+  box-shadow: 30px 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  padding: 5% 10%;
+}
+
+.container-heading {
+  width: 100%;
+  text-align: center;
+}
+
+.project {
+  width: 45%;
+  margin: 1%;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  background: #ffffff;
+  box-shadow: 25px 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 1%;
+}
+
+.card-img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.about {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.buttons {
+  display: flex;
+}
+
+.button {
+  background: #007ced;
+  box-shadow: 25px 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  border-radius: 10px;
+  color: black;
+  text-decoration: none;
+  padding: 10px 20px;
+  width: 20%;
+  margin-right: 1%;
+}
+
+.button:hover {
+  font-size: 1.1em;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+}
+
+.heading,
+.subtitle,
+.description {
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .landing {
+    flex-direction: column;
+  }
+  .Pages {
+    flex-direction: column;
+  }
 }
