--- a/styles.css
+++ b/styles.css
@@ -10,33 +10,33 @@ body {
 .Pages {
   display: flex;
   justify-content: center;
-  padding: 1%;
-  background: rgb(255 255 255);
-  box-shadow: 10px 8px 32px 0 rgba(186, 88, 189, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+  background-color: white;
+  border-style: double;
+  border-color: #007ced;
+  border-width: 10px;
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  padding: 1%;
+
   margin: 5%;
 }
+
 .navbar-link {
   display: flex;
   justify-content: space-between;
   margin: 1%;
-  font-size: 120%;
-  font-family: "Courier New", Courier, monospace;
+  font-size: 150%;
+  font-family: serif;
 }
 
 .landing {
   display: flex;
   justify-content: center;
   font-family: serif;
-  background: rgb(255 255 255);
-  box-shadow: 10px 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+  background-color: #ffffff;
+  border-style: double;
+  border-color: #007ced;
+  border-width: 10px;
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
   margin: 5%;
   padding: 5%;
 }
@@ -46,15 +46,16 @@ body {
 }
 
 h1 {
-  font-size: 300%;
-  font-family: "Courier New", Courier, monospace;
+  font-size: 350%;
+  font-family: serif;
   color: black;
+  font-weight: 350;
 }
 
 h2 {
-  font-size: 200%;
+  font-size: 250%;
   color: black;
-  font-family: "Courier New", Courier, monospace;
+  font-family: serif;
 }
 
 h3 {
@@ -72,18 +73,19 @@ img {
 
 p {
   padding: 3%;
-  font-size: 170%;
-  font-family: "Courier New", Courier, monospace;
+  font-size: 250%;
+  font-family: serif;
   color: #727272;
 }
 
+/*About Section Styling*/
+
 .about-container {
-  background: rgb(255 255 255);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
+  background-color: #ffffff;
+  border-style: double;
+  border-color: #007ced;
+  border-width: 10px;
   border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
   margin: 5%;
   padding: 5%;
 }
@@ -91,12 +93,12 @@ p {
 .bio {
   color: black;
   font-size: 140%;
-  font-family: "Courier New", Courier, monospace;
+  font-family: serif;
 }
 
 .about-text {
   font-size: 125%;
-  font-family: "Courier New", Courier, monospace;
+  font-family: serif;
 }
 
 .bio-border {
@@ -105,6 +107,13 @@ p {
   border-color: #007ced;
   margin: 2%;
   padding: 1%;
+}
+
+/*Education Section Styling*/
+
+.edu-heading {
+  padding: 1%;
+  font-weight: 300;
 }
 
 .line {
@@ -173,14 +182,44 @@ p {
   grid-column-start: 1;
 }
 
-.edu-heading {
-  padding: 1%;
+.skills-container {
+  padding: 5%;
+  margin: 5%;
+  background: #ffffff;
+  box-shadow: 0px 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  font-size: 130%;
+  border-style: double;
+  border-width: 10px;
+  border-color: #007ced;
 }
 
-.pro-heading {
+.skills-heading {
   display: flex;
   justify-content: center;
+  margin: 5%;
+  font-size: 300%;
+  background-color: #ffffff;
+  border-radius: 10px;
+  border-style: double;
+  border-color: #007ced;
+  border-width: 10px;
+  font-family: serif;
+  padding: 1%;
+  font-weight: 300;
 }
+
+.icons {
+  display: flex;
+  justify-content: center;
+  font-size: 150px;
+}
+.fab {
+  margin: 3%;
+}
+
+/*Project Section Styling*/
 
 .container {
   display: flex;
@@ -193,22 +232,17 @@ p {
   padding: 5% 10%;
 }
 
-.container-heading {
-  width: 100%;
-  text-align: center;
-}
-
 .project {
   width: 45%;
   margin: 1%;
   min-width: 300px;
   display: flex;
   flex-direction: column;
-  background: #ffffff;
-  box-shadow: 25px 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(0px);
-  -webkit-backdrop-filter: blur(0px);
+  background-color: #ffffff;
   border-radius: 10px;
+  border-style: double;
+  border-color: #007ced;
+  border-width: 10px;
   overflow: hidden;
   padding: 1%;
 }
@@ -252,12 +286,18 @@ p {
   -webkit-backdrop-filter: blur(1.5px);
 }
 
-.heading,
-.subtitle,
+.heading {
+  font-weight: 300;
+}
+.subtitle {
+  margin: 1%;
+}
 .description {
   margin-bottom: 10px;
+  font-size: 200%;
 }
 
+/*Mobile Responsive*/
 @media screen and (max-width: 600px) {
   .landing {
     flex-direction: column;
@@ -265,4 +305,43 @@ p {
   .Pages {
     flex-direction: column;
   }
+}
+
+/*Contact Form Styling*/
+
+#contact-form {
+  border-color: #ffffff;
+  flex-direction: column;
+  align-items: center;
+  padding: 10% 10%;
+  margin: 5%;
+}
+
+.contact-label {
+  height: 5%;
+  width: 5%;
+  text-transform: uppercase;
+}
+.contact-info {
+  margin-top: 10%;
+  border-radius: 20px;
+  width: 300px;
+  display: flex;
+  height: 40px;
+}
+.contact-input {
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  width: 500px;
+  border-radius: 10px;
+  text-transform: uppercase;
+}
+.contact-heading {
+  display: flex;
+  justify-content: flex-start;
+  text-transform: uppercase;
+}
+.button {
+  margin-top: 10%;
 }
