--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(0 124 237);
+  background-color: #007ced;
   margin: 5%;
 }
 
@@ -149,8 +149,9 @@ p {
 }
 .picture img {
   margin: 0% 10% 10% 0%;
-  object-fit: inherit;
-  border-radius: 250px;
+  object-fit: cover;
+  height: 35vh;
+  border-radius: 5px;
 }
 
 /*Education Section Styling*/
@@ -186,7 +187,6 @@ p {
   display: grid;
   grid-template-columns: 1fr 10% 1fr;
   grid-template-rows: repeat(4, 1fr);
-  background-color: rgb(0 124 237);
   justify-items: center;
   padding: 10%;
 }
@@ -250,6 +250,7 @@ p {
   display: flex;
   justify-content: center;
   font-size: 12vh;
+  color: #ffffff;
 }
 
 .fab {
@@ -263,7 +264,7 @@ p {
 }
 .work-heading {
   display: flex;
-  color: black;
+  color: white;
   justify-content: center;
   font-weight: 700;
   font-size: 5vh;
