--- a/styles.css
+++ b/styles.css
@@ -8,23 +8,21 @@ body {
   margin: 5%;
 }
 
-.Pages {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  overflow: hidden;
-}
-
 ul {
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
   background-color: white;
   padding: 3% 3% 3%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .landing-content img {
   width: 20vw;
-  height: 40vh;
+  height: 20vw;
+  min-width: 250px;
+  min-height: 250px;
   border-radius: 200%;
   margin-left: 4%;
   margin-bottom: 4%;
@@ -51,6 +49,7 @@ ul {
   justify-content: center;
   font-family: serif;
   background-color: #ffffff;
+  padding: bottom 5px;
 }
 
 .landing-description {
@@ -65,24 +64,24 @@ h1 {
   font-size: 150%;
   font-family: "Poppins", Helvetica, sans-serif;
   color: grey;
-  /* margin-left: 3%; */
 }
 
 h2 {
-  font-size: 250%;
+  font-size: 180%;
   color: black;
   font-family: "Poppins", Helvetica, sans-serif;
-  /* margin-left: 3%; */
 }
 
 h3 {
   color: #727272;
   font-family: "Poppins", Helvetica, sans-serif;
+  margin-left: 1%;
 }
 
 h4 {
   color: #727272;
   font-family: "Poppins", Helvetica, sans-serif;
+  margin-left: 1%;
 }
 
 img {
@@ -110,6 +109,7 @@ p {
   flex-direction: row;
   width: 100%;
   align-items: center;
+  text-decoration: none;
 }
 
 .fa-github {
@@ -120,9 +120,9 @@ p {
   color: #007ced;
 }
 
-.fa-github p {
-  font-family: Helvetica, sans-serif;
+.footer-name {
   font-size: 20px;
+  color: #007ced;
 }
 
 /*About Section Styling*/
@@ -131,11 +131,13 @@ p {
   color: black;
   font-size: 25px;
   font-family: "Poppins", Helvetica, sans-serif;
+  margin-left: 15px;
 }
 
 .about-text {
   font-size: 20px;
   font-family: "Poppins", Helvetica, sans-serif;
+  margin-left: 15px;
 }
 
 .bio {
@@ -365,10 +367,7 @@ p {
 }
 
 .button {
-  background: #007ced;
-  box-shadow: 25px 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(5.5px);
-  -webkit-backdrop-filter: blur(5.5px);
+  background-color: #eee;
   border-radius: 10px;
   color: black;
   text-decoration: none;
@@ -433,10 +432,8 @@ p {
 }
 
 #contact-form {
-  border-style: double;
-  border-width: 10px;
-  border-radius: 10px;
-  border-color: #ffffff;
+  border-radius: 20px;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -463,15 +460,22 @@ p {
   height: 60px;
   width: 380px;
   border-radius: 10px;
+  border-color: #007ced;
   text-transform: uppercase;
 }
 .contact-heading {
   display: flex;
   justify-content: center;
   text-transform: uppercase;
+  color: black;
 }
-.button {S
-  margin-top: 10%;
+.contactButton {
+  width: 120px;
+  height: 40px;
+  border-radius: 50px;
+  border-color: #007ced;
+  margin-top: 5%;
+  background-color: #ffffff;
 }
 
 /*Testimonial Styling*/
