--- a/styles.css
+++ b/styles.css
@@ -124,46 +124,50 @@ p {
   font-size: 20px;
   color: #007ced;
 }
-
 /*About Section Styling*/
+
+.about-container {
+  width: 100%;
+  padding: 5%;
+}
 
 .bio-heading {
   color: black;
-  font-size: 25px;
+  font-size: 140%;
   font-family: "Poppins", Helvetica, sans-serif;
-  margin-left: 15px;
+  margin-bottom: 5%;
 }
-
 .about-text {
-  font-size: 20px;
+  font-size: 125%;
   font-family: "Poppins", Helvetica, sans-serif;
-  margin-left: 15px;
 }
 
 .bio {
   display: flex;
   justify-content: space-between;
   background-color: #ffffff;
-  padding: 10px;
+  padding: 1%;
 }
 
 .bio .bio-content {
   width: 45%;
 }
 
-.bio-content2 {
-  width: 320px;
-}
-
 .footer-about {
   background-color: #ffffff;
   border-top: 2px solid #727272;
-  padding: 1px;
+  padding: 1%;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+div.picture {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
+
 .picture img {
-  margin: 0% 10% 10% 0%;
   object-fit: cover;
   height: 35vh;
   border-radius: 5px;
@@ -176,7 +180,7 @@ p {
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  overflow: hidden;
+  /* removed overflow hidden */
 }
 
 .edu-heading {
@@ -207,7 +211,8 @@ p {
 }
 
 .card {
-  padding: 10%;
+  padding: 20px; /* percentages aren't great for everything. Chanegd padding to pixels */
+  margin-bottom: 20px; /* at lower screen widths, cards touching one another */
   background: #ffffff;
   box-shadow: 0px 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
@@ -264,7 +269,7 @@ p {
 #logos {
   display: flex;
   justify-content: center;
-  font-size: 12vh;
+  font-size: 10vh;
   color: #ffffff;
 }
 
@@ -279,11 +284,11 @@ p {
 }
 .work-heading {
   display: flex;
-  color: black;
+  color: white;
   justify-content: center;
   font-weight: 700;
   font-size: 5vh;
-  margin: 5% 0% 5% 0%;
+  margin-right: 4%;
 }
 
 .work {
@@ -292,15 +297,12 @@ p {
   flex-direction: column;
   border-radius: 10px;
   padding: 5%;
-  margin: 3%;
+  margin: 2%;
   background-color: #ffffff;
 }
 
 .work-font {
   font-size: 180%;
-}
-
-.work-head {
 }
 
 .footer-edu {
@@ -367,20 +369,21 @@ p {
 }
 
 .button {
-  background-color: #eee;
-  border-radius: 10px;
+  background: #ffffff;
+  border-radius: 50px;
+  border: 2px solid #007ced;
+  transition: 0.3s ease;
   color: black;
+  font-family: "Poppins", Helvetica, sans-serif;
   text-decoration: none;
   padding: 10px 20px;
-  width: 20%;
+  width: 150px;
   margin-right: 1%;
 }
 
 .button:hover {
-  font-size: 1.1em;
-  background: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(1.5px);
-  -webkit-backdrop-filter: blur(1.5px);
+  background: #007ced;
+  color: #ffffff;
 }
 
 .heading {
@@ -476,6 +479,11 @@ p {
   border-color: #007ced;
   margin-top: 5%;
   background-color: #ffffff;
+  transition: 0.3s ease;
+}
+
+.contactButton:hover {
+  background-color: #007ced;
 }
 
 /*Testimonial Styling*/
