--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ img {
 }
 
 .landing-text {
-  font-size: 170%;
+  font-size: 150%;
   font-family: "Poppins", Helvetica, sans-serif;
   color: #727272;
 }
@@ -119,6 +119,7 @@ img {
 .footer-name {
   font-size: 20px;
   color: #007ced;
+  font-family: "Poppins", Helvetica, sans-serif;
 }
 /*About Section Styling*/
 
@@ -176,7 +177,6 @@ div.picture {
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  /* removed overflow hidden */
 }
 
 .edu-heading {
@@ -207,8 +207,8 @@ div.picture {
 }
 
 .card {
-  padding: 20px; /* percentages aren't great for everything. Chanegd padding to pixels */
-  margin-bottom: 20px; /* at lower screen widths, cards touching one another */
+  padding: 30px;
+  margin-bottom: 20px;
   background: #ffffff;
   box-shadow: 0px 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
@@ -252,7 +252,7 @@ div.picture {
 .skills-heading {
   display: flex;
   justify-content: center;
-  margin: 5%;
+  margin: 3%;
   font-size: 300%;
   background-color: #ffffff;
   border-radius: 10px;
@@ -265,7 +265,7 @@ div.picture {
 #logos {
   display: flex;
   justify-content: center;
-  font-size: 10vh;
+  font-size: 7vh;
   color: #ffffff;
 }
 
@@ -284,7 +284,7 @@ div.picture {
   justify-content: center;
   font-weight: 700;
   font-size: 5vh;
-  margin-right: 4%;
+  font-family: "Poppins", Helvetica, sans-serif;
 }
 
 .work {
@@ -308,6 +308,10 @@ div.picture {
   border-bottom-right-radius: 20px;
   overflow: hidden;
   background-color: #ffffff;
+}
+
+.work-head {
+  font-family: "Poppins", Helvetica, sans-serif;
 }
 
 /*Project Section Styling*/
@@ -384,6 +388,7 @@ div.picture {
 
 .heading {
   font-weight: 300;
+  font-family: "Poppins", Helvetica, sans-serif;
 }
 .subtitle {
   margin: 1%;
@@ -467,6 +472,7 @@ div.picture {
   justify-content: center;
   text-transform: uppercase;
   color: black;
+  font-family: "Poppins", Helvetica, sans-serif;
 }
 .contactButton {
   width: 120px;
@@ -480,6 +486,10 @@ div.picture {
 
 .contactButton:hover {
   background-color: #007ced;
+}
+
+textarea {
+  padding: 5%;
 }
 
 /*Testimonial Styling*/
@@ -576,7 +586,7 @@ footer {
   }
 
   .landing-text {
-    font-size: 150%;
+    font-size: 138%;
     margin-left: 5%;
     padding-bottom: 5%;
   }
@@ -599,10 +609,12 @@ footer {
 
   #logos {
     font-size: 50px;
+    margin-bottom: 15px;
   }
 
   .work {
-    padding: 8%;
+    padding: 13%;
+    margin-bottom: 40px;
   }
 
   q {
